# accntu

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  CLAUDE-old.md  CLAUDE.md  Dockerfile  LICENSE  README.md  accntu.code-workspace  bun.lockb  docker-compose.yml  drizzle.config.ts  eslint.config.ts  makefile  next.config.mjs  package.json  test-email.ts  vitest.config.ts
deploy/: .env.production.template  Dockerfile.prod  README.md  (+3 more)
services/parser/: .gitignore  makefile  pyproject.toml
services/parser/app/: config.py  duplicate.py  main.py  type.py
services/parser/app/actions/parse_transactions/: parse.py  types.py
services/parser/app/actions/parse_transactions/parsers/: base.py
services/parser/app/actions/parse_transactions/parsers/barclays_de_creditcard/: parser.py
services/parser/app/actions/parse_transactions/parsers/milesandmore_ch_creditcard/: parser.py
services/parser/app/actions/parse_transactions/parsers/milesandmore_ch_creditcard/sql/: transform.sql
services/parser/app/actions/parse_transactions/parsers/sql/: duplicate.sql
services/parser/app/db/: client.py  model.py  schema.py
services/parser/app/db/query/: transaction.py
services/parser/app/parser/: barclays_de_creditcard.py  base.py  parse.py
services/parser/app/parser/sql/: duplicate.sql  key.sql
services/parser/app/routers/: parse.py
services/parser/app/services/parse_transactions/: parse.py
services/parser/app/services/parse_transactions/parsers/: base.py
services/parser/app/services/parse_transactions/parsers/barclays_de_creditcard/: parser.py
services/parser/app/services/parse_transactions/parsers/milesandmore_ch_creditcard/: parser.py
services/parser/app/utils/: duckdb.py
services/parser/docker/: Dockerfile  docker-compose.yml
services/parser/tests/: test_barclays_parsing.py
services/parser/tests/files/: BARCLAYS_DE_CREDITCARD.xlsx  MILESANDMORE_CH_CREDITCARD.xlsx
(+1947 files in other folders)
