

[tool.black]
line-length = 120
# Assume Python 3.12.
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "I",]
ignore = ["D100"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.12.
target-version = "py312"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true


[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["Stefan Bauer <stefanjakob.bauer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
duckdb = "^0.10.1"
polars = "^0.20.17"
xlsx2csv = "^0.8.2"
pandas = "^2.2.1"
fastexcel = "^0.10.1"
boto3 = "^1.34.73"
pydantic-settings = "^2.2.1"
openpyxl = "^3.1.2"
sqlalchemy = "^2.0.29"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.4"
mypy = "^1.9.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
